--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,53 @@
+body {
+  background-color: rgb(65, 61, 61);
+}
+
 #root {
-  max-width: 1280px;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
-body {
-  background-color: rgb(83, 80, 80);
+.title {
+  color: #ffffff;
+  font-size: 2.5rem;
+  padding-top: 0.5rem;
+  margin-bottom: 0.5rem
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titlecard {
+  background-color: #333333;
+  padding: 1rem 2rem;
+  border-radius: 1.25rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.option-1 {
+  background-color: #333333;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 300px;
 }
 
-.card {
-  padding: 2em;
+.option-text {
+  color: #ffffff;
+  font-size: 1.5rem;
 }
 
-.read-the-docs {
-  color: #888;
+.nation-select {
+  width: 100vw;
+  height: 30rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
 }
