--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@ body {
   color: #ffffff;
   font-size: 2.5rem;
   padding-top: 0.5rem;
-  margin-bottom: 0.5rem
+  margin-bottom: 0.5rem;
+  font-family: "JetBrains Mono", monospace;
 }
 
 .titlecard {
@@ -41,13 +42,42 @@ body {
 
 .option-text {
   color: #ffffff;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-family: "JetBrains Mono", monospace;
+  margin:0;
 }
 
 .nation-select {
+  display: flex;
+  justify-content: center;
   width: 100vw;
   height: 30rem;
+}
+
+.nation {
+  background-color: #333333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  height: 25rem;
   font-size: 1rem;
   border-radius: 0.5rem;
-  border: 1px solid #ccc;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.flag {
+  border-radius: 0.5rem;
+  margin-bottom: 4rem;
+}
+
+.nation-text {
+  font-family: "JetBrains Mono", monospace;
+  color: #ffffff;
+  font-size: 1.5rem;
+  margin-top: 1rem;
 }
