--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,11 @@ body {
   font-size: 1.5rem;
   margin-top: 1rem;
 }
+
+.spec-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 1rem;
+  height: 1rem;
+}
