--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,14 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 1rem;
-  height: 1rem;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+}
+
+.spec-icon{
+  width: 3rem;
+  height: 3rem;
+  margin-left: 0.15rem;
+  margin-right: 0.15rem;
 }
