--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -62,6 +62,33 @@
   font-family: 'JetBrains Mono', monospace;
 }
 
+.button-spec {
+  display: grid;
+  grid-template-columns: auto 1fr auto; 
+  align-items: center;
+  margin-bottom: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%; 
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+}
+
+.button-spec img {
+  grid-column: 1; 
+  justify-self: start;
+  width: 3rem;
+  height: 3rem;
+}
+
+.button-spec-title {
+  grid-column: 2;
+  justify-self: center;
+  text-align: center;
+  margin: 0; 
+  font-family: "JetBrains Mono", monospace;
+}
+
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
